# ReadME-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  requirements.txt
src/readme_mcp/: __init__.py  github_analyzer.py  readme_generator.py  server.py
